--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -1,3 +1,9 @@
 <style type="text/css">
-p { text-align: left; }
+p {
+  text-align: left;
+}
+
+a, a:visited, a:hover, a:active {
+  text-decoration: none !important;
+}
 </style>
