--- a/assets/css/reveal_custom.css
+++ b/assets/css/reveal_custom.css
@@ -1,9 +1,3 @@
 <style type="text/css">
-p {
-  text-align: left;
-}
-
-a, a:visited, a:hover, a:active {
-  text-decoration: none !important;
-}
+p { text-align: left; }
 </style>
